WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145920
Fix overloaded virtual function warning in ScrollbarThemeGtk.h
https://bugs.webkit.org/show_bug.cgi?id=145920
Summary
Fix overloaded virtual function warning in ScrollbarThemeGtk.h
Csaba Osztrogonác
Reported
2015-06-12 04:16:15 PDT
In file included from ../../Source/WebCore/platform/gtk/ScrollbarThemeGtk.cpp:27: ../../Source/WebCore/platform/gtk/ScrollbarThemeGtk.h:48:13: warning: 'WebCore::ScrollbarThemeGtk::thumbRect' hides overloaded virtual function [-Woverloaded-virtual] IntRect thumbRect(ScrollbarThemeClient*, const IntRect& unconstrainedTrackRect); ^ ../../Source/WebCore/platform/ScrollbarThemeComposite.h:58:21: note: hidden overloaded virtual function 'WebCore::ScrollbarThemeComposite::thumbRect' declared here: different number of parameters (1 vs 2) virtual IntRect thumbRect(ScrollbarThemeClient*); ^ 1 warning generated.
Attachments
Patch
(1.27 KB, patch)
2015-07-10 07:43 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-07-10 07:43:52 PDT
Created
attachment 256580
[details]
Patch Now the thumbRect of the baseclass isn't used (it would be compile error), but the easiest way to fix this warning is to unhide it for the compiler with an explicit using.
WebKit Commit Bot
Comment 2
2015-07-10 10:39:24 PDT
Comment on
attachment 256580
[details]
Patch Clearing flags on attachment: 256580 Committed
r186680
: <
http://trac.webkit.org/changeset/186680
>
WebKit Commit Bot
Comment 3
2015-07-10 10:39:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug