Fix overloaded virtual function warning in ScrollbarThemeGtk.h https://bugs.webkit.org/show_bug.cgi?id=145920

Reviewed by Darin Adler.

* platform/gtk/ScrollbarThemeGtk.h:


Canonical link: https://commits.webkit.org/164917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186680 268f45cc-cd09-0410-ab3c-d52691b4dbfc